# nova-systemmonitor

./: README.md  package-lock.json  package.json  tailwind.config.js
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/cpu/: mod.rs
src-tauri/src/modules/disk/: mod.rs
src-tauri/src/modules/gpu/: mod.rs
src-tauri/src/modules/memory/: mod.rs
src-tauri/src/modules/network/: mod.rs
src-tauri/src/modules/process/: mod.rs
src-tauri/src/modules/sensors/: mod.rs
src-tauri/src/modules/system/: mod.rs
src/lib/components/: Graph.svelte  ProcessDetailsModal.svelte
src/lib/components/layout/: Sidebar.svelte
src/lib/stores/: monitor.svelte.ts  settings.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/cpu/: +page.svelte
src/routes/disk/: +page.svelte
src/routes/gpu/: +page.svelte
src/routes/memory/: +page.svelte
src/routes/network/: +page.svelte
src/routes/processes/: +page.svelte
src/routes/sensors/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/system/: +page.svelte
