[package]
name = "nova-systemmonitor"
version = "0.1.0"
description = "Nova System Monitor - A modern Linux system monitoring application"
authors = ["Nova Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nova_systemmonitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System monitoring (UPDATED to latest)
sysinfo = "0.32"  # Keeping 0.32 for API stability
tokio = { version = "1", features = ["full"] }

# GPU monitoring
nvml-wrapper = "0.10"  # NVIDIA support

# Async utilities
futures = "0.3"

# Error handling
thiserror = "2"
anyhow = "1"

# Process priority control
libc = "0.2"

# Historical data & persistence
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"

# SMART disk monitoring
regex = "1"  # For parsing smartctl output
